--- a/files/mainfest.plist
+++ b/files/mainfest.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>会员港</string>
+				<string>会员港(如果安装失败:卸载旧版本,或者请到开发人员处添加UDID)</string>
 			</dict>
 		</dict>
 	</array>
